tests/cases/control-flow/ok/for-range.ari
fn main() -> i64 {
  var total = 0;
  for value in range(0, 5) {
    if value == 3 {
      continue;
    }
    total = total + value;
  }
  return total;
}

