tests/cases/control-flow/errors/for-not-range.ari
fn main() -> i64 {
  for value in 7 {
    return value;
  }
  return 0;
}
